force-app/main/default/objects/Container__c/Container__c.object-meta.xml
<CustomObject>
    <description>containers managed by United company</description>
    <label>Container</label>
    <nameField>
        <displayFormat>UCMA{0000000}</displayFormat>
        <label>Container Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Containers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>