force-app/main/default/objects/Container__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RED</fullName>
            </value>
            <value>
                <fullName>GREEN</fullName>
            </value>
            <value>
                <fullName>BLUE</fullName>
            </value>
            <value>
                <fullName>GREY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>