force-app/main/default/objects/Container__c/fields/Container_Owner__c.field-meta.xml
<CustomField>
    <fullName>Container_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of private container</description>
    <inlineHelpText>Owner of private container</inlineHelpText>
    <label>Container Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Container Owners</relationshipLabel>
    <relationshipName>Container_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>