force-app/main/default/objects/Container__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <description>type of sea container</description>
    <inlineHelpText>type of sea container</inlineHelpText>
    <label>Container Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Container_Types</valueSetName>
    </valueSet>
</CustomField>