force-app/main/default/objects/Container__c/fields/Max_Payload_kg__c.field-meta.xml
<CustomField>
    <fullName>Max_Payload_kg__c</fullName>
    <description>cargo capacity of container</description>
    <inlineHelpText>cargo capacity of container</inlineHelpText>
    <label>Max Payload, kg</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>