force-app/main/default/objects/Container__c/fields/Tare_Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Tare_Weight_kg__c</fullName>
    <description>weight of empty container</description>
    <inlineHelpText>weight of empty container</inlineHelpText>
    <label>Tare Weight, kg</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>