force-app/main/default/objects/Container__c/fields/TotalVoyages__c.field-meta.xml
<CustomField>
    <fullName>TotalVoyages__c</fullName>
    <description>Total consignments shipped in this container</description>
    <inlineHelpText>Total consignments shipped in this container</inlineHelpText>
    <label>Total Voyages</label>
    <summaryForeignKey>Consignment__c.Container__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>