force-app/main/default/objects/Container__c/recordTypes/Commercial_Container.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Container</fullName>
    <active>true</active>
    <description>Container belongs to United Company</description>
    <label>Commercial Container</label>
</RecordType>