force-app/main/default/objects/Container__c/recordTypes/Private_Container.recordType-meta.xml
<RecordType>
    <fullName>Private_Container</fullName>
    <active>true</active>
    <description>Container belongs to private owner</description>
    <label>Private Container</label>
</RecordType>