force-app/main/default/objects/Container__c/validationRules/Owner_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_Required</fullName>
    <active>true</active>
    <description>Owner required for private container</description>
    <errorConditionFormula>AND($RecordType.Name = &quot;Private Container&quot;,
ISBLANK(Container_Owner__c))</errorConditionFormula>
    <errorMessage>Owner required for private container</errorMessage>
</ValidationRule>